--- a/config.json
+++ b/config.json
@@ -1,6 +1,20 @@
 {
-  "threshold": 30,
-  "unit": "万",
-  "period": "30分钟",
+  "period_list": [
+    {
+      "threshold": 1000.0,
+      "unit": "万",
+      "period": "30分钟"
+    },
+    {
+      "threshold": 1000.0,
+      "unit": "万",
+      "period": "1小时"
+    },
+    {
+      "threshold": 1000.0,
+      "unit": "万",
+      "period": "4小时"
+    }
+  ],
   "wx_token": "SCT264877TGGj20niEYBVMMFU1aN6NQF6g"
 }
