--- a/config.json
+++ b/config.json
@@ -8,12 +8,12 @@
     {
       "threshold": 50,
       "unit": "万",
-      "period": "5分钟"
+      "period": "1小时"
     },
     {
       "threshold": 100,
       "unit": "万",
-      "period": "5分钟"
+      "period": "4小时"
     }
   ],
   "wx_token": "SCT264877TGGj20niEYBVMMFU1aN6NQF6g"
